formula/source/core/api/FormulaCompiler.cxx
@@ -1452,9 +1452,17 @@ void FormulaCompiler::Factor()
                 case ocConvertOOo :
                 case ocDde:
                 case ocMacro:
-                case ocExternal:
                 case ocWebservice:
                     pArr->AddRecalcMode( ScRecalcMode::ONLOAD_LENIENT );
+                break;
+                    // RANDBETWEEN() is volatile like RAND(). Other Add-In
+                    // functions may have to be recalculated or not, we don't
+                    // know, classify as ONLOAD_LENIENT.
+                case ocExternal:
+                    if (mpToken->GetExternal() == "com.sun.star.sheet.addin.Analysis.getRandbetween")
+                        pArr->SetExclusiveRecalcModeAlways();
+                    else
+                        pArr->AddRecalcMode( ScRecalcMode::ONLOAD_LENIENT );
                 break;
                     // If the referred cell is moved the value changes.
                 case ocColumn :
